fix: enhance modal messages for better readability and adjust layout styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,6 @@
   display: none;
 }
 
-@media (min-width: 1024px) {
-  html {
-    overflow-y: hidden;
-  }
+html {
+  background-color: black;
 }
